# kvalog

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: kvalogConfig.cmake.in
examples/: kvalog_example.cpp
kvalog/: kvalog.hpp
samples/: kvalog_samples.cpp
